# learning-axum-8695c862

./: .env.sample  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  docker-compose.yml
backup/v1/database/: mod.rs
backup/v1/routes/auth/: logout_user.rs  register_user.rs
backup/v1/routes/example/: custom_middleware.rs  hello_world.rs  mod.rs  status_codes.rs
backup/v1/routes/tasks/: create_tasks.rs  delete_tasks.rs
docker/: init.sql
https/: json.http  main.http  middleware.http  mirror_body.http  params.http  path_variables.http  query_params.http  status_codes.http  tasks.http  user.http
https/example/: json.http  middleware.http  mirror_body.http  params.http  status_codes.http
scripts/: cargo_pkg.bash
src/: lib.rs  main.rs  router.rs
src/common/: app_error.rs  mod.rs
src/database/: prelude.rs  tasks.rs  users.rs
src/middleware/: require_authentication.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/: custom_json.rs  custom_middleware.rs  hello_world.rs  mirror_body.rs  mod.rs  params.rs  path_variables.rs  query_params.rs  tasks.rs
src/routes/auth/: guard.rs  login_user.rs  logout_user.rs  mod.rs  register_user.rs
src/routes/example/: custom_middleware.rs  mirror_body.rs  mod.rs
src/routes/tasks/: create_tasks.rs  delete_tasks.rs  get_tasks.rs  mod.rs  task_extractors.rs  update_tasks.rs
src/utils/: hash.rs  jwt.rs  mod.rs
